Fix version spacing

--- a/extension/css/popup.css
+++ b/extension/css/popup.css
@@ -63,7 +63,6 @@ a:visited {
 	margin-top: 0.2vw;
 	width:25vw;
 	padding-left: 1vw;
-	margin-bottom:2.2vw;
 }
 
 #main-image {
